--- a/app/src/main/res/layout/activity_elder_view.xml
+++ b/app/src/main/res/layout/activity_elder_view.xml
@@ -1,9 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ElderView">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/header_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Elder view"
+        android:textSize="40sp"
+        android:gravity="center"
+        android:layout_centerVertical="true" />
+
+    <TextView
+        android:id="@+id/loggedInUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Logged in as "/>
+
+    <Button
+        android:id="@+id/logoutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Log out"
+        android:textSize="20sp"
+        android:padding="40dp"
+        android:backgroundTint="@color/red"
+        android:layout_below="@+id/header_text"
+        android:layout_centerHorizontal="true" />
+
+</RelativeLayout>
