Able to change language on different activities

--- a/app/src/main/res/layout/activity_elder_view.xml
+++ b/app/src/main/res/layout/activity_elder_view.xml
@@ -32,4 +32,31 @@
         android:layout_below="@+id/header_text"
         android:layout_centerHorizontal="true" />
 
+    <RadioGroup
+        android:id="@+id/radiog1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/logoutButton"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/rb_swedish1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"
+            android:layout_weight="1"
+            android:padding="8dp"
+            android:text="@string/swedish" />
+
+        <RadioButton
+            android:id="@+id/rb_english1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+
+            android:padding="8dp"
+            android:text="@string/english" />
+
+    </RadioGroup>
+
 </RelativeLayout>
