--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,4 +111,15 @@
 
     </RadioGroup>
 
+    <Button
+        android:id="@+id/signUpNewElder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sign up new Elder"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.948" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
