--- a/app/src/main/res/layout/activity_elder_view.xml
+++ b/app/src/main/res/layout/activity_elder_view.xml
@@ -31,6 +31,16 @@
         android:backgroundTint="@color/red"
         android:layout_below="@+id/header_text"
         android:layout_centerHorizontal="true" />
+    <Button
+        android:id="@+id/reminderBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Meal Reminder"
+        android:textSize="20sp"
+        android:padding="40dp"
+        android:layout_marginTop="100dp"
+        android:backgroundTint="@color/red"
+        android:layout_centerHorizontal="true" />
 
     <RadioGroup
         android:id="@+id/radiog1"
