--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="red">#8A0900</color>
     <color name="gray">#7E7D7D</color>
     <color name="softgreen">#A7C7AA</color>
+    <color name="green">#008000</color>
 </resources>
