--- a/app/src/main/res/layout/activity_elder_view.xml
+++ b/app/src/main/res/layout/activity_elder_view.xml
@@ -35,7 +35,7 @@
         android:id="@+id/reminderBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Meal Reminder"
+        android:text="@string/meal_reminder"
         android:textSize="20sp"
         android:padding="40dp"
         android:layout_marginTop="100dp"
@@ -44,16 +44,18 @@
 
     <RadioGroup
         android:id="@+id/radiog1"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/logoutButton"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_centerInParent="true"
+        android:minWidth="411dp">
 
         <RadioButton
             android:id="@+id/rb_swedish1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="60dp"
+            android:layout_marginStart="60dp"
             android:layout_weight="1"
             android:padding="8dp"
             android:text="@string/swedish" />
