--- a/app/src/main/res/layout/activity_elderly_sign_up.xml
+++ b/app/src/main/res/layout/activity_elderly_sign_up.xml
@@ -152,8 +152,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/password"
         android:layout_margin="20dp"
+        android:backgroundTint="@color/blue"
         android:layout_centerHorizontal="true"
         android:text="@string/sign_up_new_elder"
-        android:textSize="25sp" />
+        android:textSize="25sp"
+        android:textColor="@color/white"/>
 
 </RelativeLayout>
