--- a/app/src/main/res/layout/first_login.xml
+++ b/app/src/main/res/layout/first_login.xml
@@ -89,7 +89,8 @@
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="@string/login"
-        android:background="@color/blue"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/blue"
         android:layout_centerHorizontal="true"
 
         />
