--- a/app/src/main/res/layout/activity_elderly_sign_up.xml
+++ b/app/src/main/res/layout/activity_elderly_sign_up.xml
@@ -1,161 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ElderlySignUp">
-
-    <EditText
-        android:id="@+id/fullname"
-        android:layout_width="wrap_content"
+    android:layout_height="match_parent">
+    <RelativeLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@color/blue"
-        android:drawableStart="@drawable/baseline_person_outline_24"
-        android:drawablePadding="20dp"
-        android:hint="@string/full_name"
-        android:padding="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:layout_centerHorizontal="true"
-        android:minWidth="480dp"
-        android:inputType="textPersonName"
-        android:autofillHints="name"/>
+        tools:context=".ElderlySignUp">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/email"
-        android:layout_below="@+id/fullname"
-        android:background="@color/blue"
-        android:hint="@string/email"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-        android:layout_margin="10dp"
-        android:padding="20dp"
-        android:drawableStart="@drawable/baseline_email_24"
-        android:drawablePadding="20dp"
-        android:layout_centerHorizontal="true"
-        android:minWidth="480dp"
-        android:inputType="textEmailAddress"
-        android:autofillHints="emailAddress"/>
+        <EditText
+            android:id="@+id/fullname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/blue"
+            android:drawableStart="@drawable/baseline_person_outline_24"
+            android:drawablePadding="20dp"
+            android:hint="@string/full_name"
+            android:padding="20dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:layout_centerHorizontal="true"
+            android:minWidth="480dp"
+            android:inputType="textPersonName"
+            android:autofillHints="name"/>
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/phoneNumber"
-        android:layout_below="@+id/email"
-        android:background="@color/blue"
-        android:hint="@string/phone_number"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-        android:layout_margin="10dp"
-        android:padding="20dp"
-        android:drawableStart="@drawable/baseline_phone_24"
-        android:drawablePadding="20dp"
-        android:inputType="phone"
-        android:layout_centerHorizontal="true"
-        android:minWidth="480dp"
-        android:autofillHints="phone"/>
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/email"
+            android:layout_below="@+id/fullname"
+            android:background="@color/blue"
+            android:hint="@string/email"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:layout_margin="10dp"
+            android:padding="20dp"
+            android:drawableStart="@drawable/baseline_email_24"
+            android:drawablePadding="20dp"
+            android:layout_centerHorizontal="true"
+            android:minWidth="480dp"
+            android:inputType="textEmailAddress"
+            android:autofillHints="emailAddress"/>
 
-    <EditText
-        android:id="@+id/address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/phoneNumber"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@color/blue"
-        android:drawableStart="@drawable/baseline_home_24"
-        android:drawablePadding="20dp"
-        android:hint="@string/address"
-        android:inputType="textPostalAddress"
-        android:padding="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:layout_centerHorizontal="true"
-        android:minWidth="480dp"
-        android:autofillHints="postalAddress"/>
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/phoneNumber"
+            android:layout_below="@+id/email"
+            android:background="@color/blue"
+            android:hint="@string/phone_number"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:layout_margin="10dp"
+            android:padding="20dp"
+            android:drawableStart="@drawable/baseline_phone_24"
+            android:drawablePadding="20dp"
+            android:inputType="phone"
+            android:layout_centerHorizontal="true"
+            android:minWidth="480dp"
+            android:autofillHints="phone"/>
 
-    <EditText
-        android:id="@+id/allergies"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/address"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@color/blue"
-        android:drawableStart="@drawable/baseline_fastfood_24"
-        android:drawablePadding="20dp"
-        android:hint="@string/allergies"
-        android:padding="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:layout_centerHorizontal="true"
-        android:minWidth="480dp"
-        android:importantForAutofill="no"
-        android:inputType="text"/>
+        <EditText
+            android:id="@+id/address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/phoneNumber"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/blue"
+            android:drawableStart="@drawable/baseline_home_24"
+            android:drawablePadding="20dp"
+            android:hint="@string/address"
+            android:inputType="textPostalAddress"
+            android:padding="20dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:layout_centerHorizontal="true"
+            android:minWidth="480dp"
+            android:autofillHints="postalAddress"/>
 
-    <EditText
-        android:id="@+id/username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@color/blue"
-        android:drawableStart="@drawable/baseline_person_outline_24"
-        android:drawablePadding="20dp"
-        android:hint="@string/username"
-        android:padding="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:layout_below="@id/allergies"
-        android:layout_centerHorizontal="true"
-        android:minWidth="480dp"
-        android:inputType="textPersonName"
-        android:autofillHints="username"/>
+        <EditText
+            android:id="@+id/allergies"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/address"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/blue"
+            android:drawableStart="@drawable/baseline_fastfood_24"
+            android:drawablePadding="20dp"
+            android:hint="@string/allergies"
+            android:padding="20dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:layout_centerHorizontal="true"
+            android:minWidth="480dp"
+            android:importantForAutofill="no"
+            android:inputType="text"/>
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/username"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@color/blue"
-        android:drawableStart="@drawable/baseline_key_24"
-        android:drawablePadding="20dp"
-        android:hint="@string/_4_digit_pin"
-        android:inputType="numberPassword"
-        android:padding="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:layout_centerHorizontal="true"
-        android:minWidth="480dp"
-        android:autofillHints="password"/>
+        <EditText
+            android:id="@+id/username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/blue"
+            android:drawableStart="@drawable/baseline_person_outline_24"
+            android:drawablePadding="20dp"
+            android:hint="@string/username"
+            android:padding="20dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:layout_below="@id/allergies"
+            android:layout_centerHorizontal="true"
+            android:minWidth="480dp"
+            android:inputType="textPersonName"
+            android:autofillHints="username"/>
 
-    <Button
-        android:id="@+id/signUp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/password"
-        android:layout_margin="20dp"
-        android:backgroundTint="@color/blue"
-        android:layout_centerHorizontal="true"
-        android:text="@string/sign_up_new_elder"
-        android:textSize="25sp"
-        android:textColor="@color/white"/>
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/username"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/blue"
+            android:drawableStart="@drawable/baseline_key_24"
+            android:drawablePadding="20dp"
+            android:hint="@string/_4_digit_pin"
+            android:inputType="numberPassword"
+            android:padding="20dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:layout_centerHorizontal="true"
+            android:minWidth="480dp"
+            android:autofillHints="password"/>
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/signUp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/password"
+            android:layout_margin="20dp"
+            android:backgroundTint="@color/blue"
+            android:layout_centerHorizontal="true"
+            android:text="@string/sign_up_new_elder"
+            android:textSize="25sp"
+            android:textColor="@color/white"/>
+
+    </RelativeLayout>
+</ScrollView>
