--- a/app/src/main/res/layout/activity_elder_view.xml
+++ b/app/src/main/res/layout/activity_elder_view.xml
@@ -14,14 +14,16 @@
         android:layout_alignParentBottom="true"
         android:text="@string/logged_in_as"/>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/logoutButton"
         android:layout_width="200dp"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
         android:text="@string/log_out"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="250dp"
+        android:layout_marginLeft="200dp"
+        android:layout_marginBottom="10dp"
         android:textSize="20dp"
+        android:textColor="@color/white"
         android:backgroundTint="@color/red" />
 
 
@@ -94,7 +96,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="30dp"
-            android:text="00:00"
+            android:text=""
 
             />
         <TextView
@@ -103,7 +105,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:text="@string/example_comment"
+            android:text=""
 
             />
 
